# gaussian-splat-pbr-materials

./: .gitignore  LICENSE  LICENSE-NOTICE.md  README.md  pyproject.toml  requirements.txt
examples/can_opener_resistance_fill/: resistance_fill_stats.json  source_baked_albedo_materials.json
examples/can_opener_resistance_fill/pbr/: _surface_materials_manifest.json
paper/: academia_upload_metadata.md  gaussian_splat_pbr_paper.html  gaussian_splat_pbr_paper.md  gaussian_splat_pbr_publication.html  gaussian_splat_pbr_publication.md
scripts/: intrinsic_ab_test.py  render_uv_captures.py
src/: pbr_pixelart.py  pbr_surface.py  sn_backend.py
