[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-splat-pbr-materials"
version = "0.1.0"
description = "Recover PBR material atlases from Gaussian splat, scan, and proxy-mesh RGB/UV captures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gregor Koch" }]
keywords = ["pbr", "gaussian-splatting", "photogrammetry", "texture", "uv", "material-atlas"]
dependencies = [
    "pillow>=9.0",
    "numpy>=1.21",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
intrinsics = [
    "torch>=2.1",
    "diffusers>=0.35",
    "transformers>=4.40",
    "accelerate>=0.30",
    "safetensors>=0.4",
]
segmentation = [
    "torch>=2.1",
    "torchvision>=0.16",
    "segment-anything>=1.0",
]

[project.urls]
Homepage = "https://github.com/cronos3k/gaussian-splat-pbr-materials"

[project.scripts]
pbr-surface = "pbr_surface:main"
pbr-pixelart = "pbr_pixelart:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["pbr_pixelart", "pbr_surface", "sn_backend"]
